<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".app.carrito.PedidoNoRegistrado">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/space_3x"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">


        <TextView
            style="@style/TextViewTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/order_not_processed" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/motorista2" />

        <TextView
            style="@style/TextViewSubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_2x"
            android:layout_marginEnd="@dimen/space_2x"
            android:gravity="start|center_vertical"
            android:maxLines="2"
            android:text="@string/order_not_in_way" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_2x"
            android:layout_marginEnd="@dimen/space_2x"
            android:gravity="start|center_vertical"
            android:maxLines="2"
            android:text="@string/order_not_in_apg"
            android:textColor="@color/purple" />

        <Button
            android:id="@+id/orderToInicio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_2x"
            android:layout_marginEnd="@dimen/space_2x"
            android:background="@color/orange"
            android:maxLines="2"
            android:text="@string/home"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="2" />
    </LinearLayout>
</LinearLayout>