<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <com.google.android.material.textview.MaterialTextView
            style="@style/TextViewSubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_10x"
            android:layout_marginTop="@dimen/space_2x"
            android:layout_marginEnd="@dimen/space_10x"
            android:gravity="center"
            android:text="@string/order_cancelled"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_5x"
            android:layout_marginTop="@dimen/space_2x"
            android:layout_marginEnd="@dimen/space_5x"
            android:adjustViewBounds="true"
            android:src="@drawable/motorista2"
            android:contentDescription="Motirista Atorado"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextViewSubTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_3x"
            android:layout_marginTop="@dimen/space_default"
            android:layout_marginEnd="@dimen/space_3x"
            android:gravity="center"
            android:text="@string/order_cancelled_motive_title"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_5x"
            android:layout_marginTop="@dimen/space_default"
            android:layout_marginEnd="@dimen/space_5x"
            android:gravity="center"
            android:text="@string/order_cancelled_motive1"
            android:textColor="@color/purple"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_5x"
            android:layout_marginTop="@dimen/space_default"
            android:layout_marginEnd="@dimen/space_5x"
            android:gravity="center"
            android:text="@string/order_cancelled_motive2"
            android:textColor="@color/purple"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_5x"
            android:layout_marginTop="@dimen/space_default"
            android:layout_marginEnd="@dimen/space_5x"
            android:gravity="center"
            android:text="@string/order_cancelled_motive3"
            android:textColor="@color/purple"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>