<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_dialog_header_background" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        style="@style/TextViewTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_4x"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/space_4x"
        android:includeFontPadding="false"
        android:text="@string/uhh_x" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_10x"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/space_10x"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_confused_person" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRecoverySuccessDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2x"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/space_2x"
        android:gravity="center"
        android:text="@string/bad_username"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/purple"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDialog"
        style="@style/PrimaryButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_2x"
        android:layout_marginBottom="@dimen/space_2x"
        android:padding="@dimen/space_2x"
        android:text="@string/come_back" />

</LinearLayout>