<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_dialog_header_background" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/TextViewTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/space_4x"
            android:includeFontPadding="false"
            android:text="@string/oh_no_x" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/space_4x"
            android:adjustViewBounds="true"
            android:src="@drawable/sad_face" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRecoverySuccessDescription"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4x"
            android:layout_marginTop="@dimen/space_2x"
            android:layout_marginEnd="@dimen/space_4x"
            android:gravity="center"
            android:text="@string/bad_signin"
            android:textColor="@color/purple" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDialog"
            style="@style/PrimaryButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_2x"
            android:layout_marginBottom="@dimen/space_2x"
            android:padding="@dimen/space_2x"
            android:text="@string/come_back" />

    </LinearLayout>
</LinearLayout>